[tool.poetry]
name = "autopredictor"
version = "0.1.0"
description = "A package that streamline the repetitive task of regression models selection and comparison in the machine learning workflow."
authors = ["Anu Banga, Arturo Rey, Sharon Voon, Zeily Garcia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
